# noggit-red

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  uid_fix_concept.md
cmake/: GenerateRevision.cmake  cmake_function.cmake  cmake_lib.cmake  cmake_macro.cmake
etc/: random_changes_for_mop.diff
include/win/: StackWalker.cpp
media/: res.aps  res.rc
resources/: DefaultStyle.json  darkstyle.qrc  framelesswindow.qrc  resources.qrc
resources/themes/Dark/: editing_theme.qss  theme.qss
sql/: Noggit.sql
src/glsl/: liquid_frag.glsl  liquid_vert.glsl  m2_box_vert.glsl  m2_frag.glsl  m2_vert.glsl  mfbo_vert.glsl  occluder_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  wmo_frag.glsl  wmo_vert.glsl
src/math/: bounding_box.cpp  bounding_box.hpp  coordinates.cpp  coordinates.hpp  frustum.cpp  frustum.hpp  interpolation.hpp  matrix_4x4.cpp  matrix_4x4.hpp  projection.hpp  quaternion.hpp  ray.cpp  ray.hpp  sphere.cpp  sphere.hpp  trig.cpp  trig.hpp  vector_3d.hpp
src/mysql/: mysql.cpp  mysql.h
src/noggit/: Action.cpp  Action.hpp  ActionManager.cpp  ActionManager.hpp  Alphamap.cpp  Alphamap.hpp  Animated.h  AsyncLoader.cpp  AsyncLoader.h  AsyncObject.cpp  AsyncObject.h  AsyncObjectMultimap.hpp  BoolToggleProperty.hpp  Brush.cpp  Camera.cpp  Camera.hpp  ChunkWater.cpp  ChunkWater.hpp  Cli.cpp  Cli.hpp  Cli.inl  ContextObject.hpp  CursorRender.cpp  CursorRender.hpp  DBC.cpp  DBC.h  DBCFile.cpp  DBCFile.h  IOStream.hpp  Input.hpp  LiquidTextureManager.cpp  LiquidTextureManager.hpp  MPQ.cpp  MPQ.h  MakeshiftCommon.cpp  MakeshiftCommon.hpp  MakeshiftCommon.inl  MakeshiftMt.cpp  MakeshiftMt.hpp  MapChunk.cpp  (+80 more)
src/noggit/Red/ActionHistoryNavigator/: ActionHistoryNavigator.cpp
src/noggit/Red/AssetBrowser/: ModelView.cpp  ModelView.hpp
src/noggit/Red/BrushStack/: BrushStack.cpp  BrushStack.hpp  BrushStack.ui  BrushStackItem.cpp  BrushStackItem.hpp
src/noggit/Red/NodeEditor/: NodeRegistry.hpp
src/noggit/Red/PresetEditor/: ModelView.cpp  ModelView.hpp
src/noggit/Red/PreviewRenderer/: PreviewRenderer.cpp  PreviewRenderer.hpp
src/noggit/Red/ToolPanel/: ToolPanel.cpp  ToolPanel.hpp  ToolPanelScroll.ui
src/noggit/Red/UiCommon/: ExtendedSlider.cpp  ExtendedSlider.hpp  ExtendedSliderUi.ui  ImageBrowser.cpp  ImageBrowser.hpp  ImageBrowser.ui  ImageMaskSelector.cpp  ImageMaskSelector.hpp  ImageMaskSelector.ui  ReorderableVerticalBox.cpp  ReorderableVerticalBox.hpp  expanderwidget.cpp
src/noggit/Red/ViewportGizmo/: ViewportGizmo.cpp  ViewportGizmo.hpp
src/noggit/Red/ViewportManager/: ViewportManager.hpp
src/noggit/application/: ApplicationEntry.cpp  NoggitApplication.cpp  NoggitApplication.hpp  Utils.hpp
src/noggit/application/Configuration/: NoggitApplicationConfiguration.hpp  NoggitApplicationConfigurationReader.cpp  NoggitApplicationConfigurationReader.hpp  NoggitApplicationConfigurationWriter.cpp  NoggitApplicationConfigurationWriter.hpp  SettingsEntry.cpp  SettingsEntry.hpp
src/noggit/data/: _Data.h
src/noggit/project/: ApplicationProject.cpp  ApplicationProject.h  ApplicationProjectReader.cpp  ApplicationProjectReader.h  ApplicationProjectWriter.cpp  ApplicationProjectWriter.h  CurrentProject.hpp  _Project.h
src/noggit/rendering/: BaseRender.hpp  CursorRender.cpp  CursorRender.hpp  FlightBoundsRender.cpp  FlightBoundsRender.hpp  LiquidRender.cpp  LiquidRender.hpp  LiquidTextureManager.cpp  LiquidTextureManager.hpp  ModelRender.cpp  ModelRender.hpp  Primitives.cpp  Primitives.hpp  TileRender.cpp  TileRender.hpp  WMOGroupRender.cpp  WMOGroupRender.hpp  WMORender.cpp  WMORender.hpp  WorldRender.cpp  WorldRender.hpp
src/noggit/rendering/glsl/: cylinder_vert.glsl  grid_vert.glsl  line_vert.glsl  wmo_frag.glsl  (+10 more)
src/noggit/scripting/: script_brush.cpp  script_brush.hpp  script_chunk.cpp  script_chunk.hpp  script_context.cpp  script_context.hpp  script_exception.cpp  script_exception.hpp  script_filesystem.cpp  script_filesystem.hpp  script_global.cpp  script_global.hpp  script_image.cpp  script_image.hpp  script_math.cpp  script_math.hpp  script_model.cpp  script_model.hpp  script_noise.cpp  script_noise.hpp  script_object.cpp  script_object.hpp  script_procedures.cpp  script_procedures.hpp  script_profiles.cpp  script_profiles.hpp  script_random.cpp  script_random.hpp  script_registry.ipp  script_selection.cpp  script_selection.hpp  script_settings.cpp  script_settings.hpp  script_standard_brush.cpp  script_standard_brush.hpp  script_tex.cpp  script_tex.hpp  script_vert.cpp  script_vert.hpp  scripting_tool.cpp  (+1 more)
src/noggit/simulation/: _Simulation.h
src/noggit/tools/: AreaTool.cpp  AreaTool.hpp  AreaTriggerTool.cpp  AreaTriggerTool.hpp  ChunkTool.cpp  ChunkTool.hpp  FlattenBlurTool.cpp  FlattenBlurTool.hpp  HoleTool.cpp  HoleTool.hpp  ImpassTool.cpp  ImpassTool.hpp  LightTool.cpp  LightTool.hpp  MinimapTool.cpp  MinimapTool.hpp  ObjectTool.cpp  ObjectTool.hpp  RaiseLowerTool.cpp  RaiseLowerTool.hpp  ScriptingTool.cpp  ScriptingTool.hpp  StampTool.cpp  StampTool.hpp  TexturingTool.cpp  TexturingTool.hpp  VertexPainterTool.cpp  VertexPainterTool.hpp  WaterTool.cpp  WaterTool.hpp
src/noggit/ui/: About.cpp  About.ui  Checkbox.hpp  ClickableLabel.cpp  ClickableLabel.hpp  CurrentTexture.cpp  CurrentTexture.h  DetailInfos.cpp  DetailInfos.h  FlattenTool.cpp  FlattenTool.hpp  FontAwesome.cpp  FontAwesome.hpp  FontNoggit.cpp  FontNoggit.hpp  FramelessWindow.hpp  GroundEffectsTool.cpp  GroundEffectsTool.hpp  Help.cpp  Help.h  HelperModels.cpp  HelperModels.h  LightObjectEditor.cpp  LightObjectEditor.h  MapViewOverlay.ui  MinimapCreator.cpp  MinimapCreator.hpp  ModelImport.cpp  ModelImport.h  ModelList.cpp  ModelList.h  ObjectEditor.cpp  ObjectEditor.h  RotationEditor.cpp  RotationEditor.h  SettingsPanel.cpp  SettingsPanel.h  SettingsPanel.ui  ShaderTool.cpp  ShaderTool.hpp  (+51 more)
src/opengl/: context.cpp  context.hpp  context.inl  delayed.hpp  primitives.cpp  primitives.hpp  scoped.hpp  scoped.ipp  shader.cpp  shader.fwd.hpp  shader.hpp  texture.cpp  texture.hpp  types.hpp
src/util/: CurrentFunction.hpp  FlatMap.hpp  exception_to_string.cpp
(+1157 files in other folders)
